src/x12/EdiX12Parser.ts
// Generated from grammar/EdiX12Parser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { EdiX12ParserListener } from "./EdiX12ParserListener";
import { EdiX12ParserVisitor } from "./EdiX12ParserVisitor";


export class EdiX12Parser extends Parser {
	public static readonly DataSeparator = 1;
	public static readonly RepititionSeparator = 2;
	public static readonly ComponentSeparator = 3;
	public static readonly SegmentTerminator = 4;
	public static readonly EndOfLine = 5;
	public static readonly ControlChar = 6;
	public static readonly Char = 7;
	public static readonly InterchangeHeader = 8;
	public static readonly InterchangeTrailer = 9;
	public static readonly GroupHeader = 10;
	public static readonly GroupTrailer = 11;
	public static readonly TransactionHeader = 12;
	public static readonly TransactionTrailer = 13;
	public static readonly Tag = 14;
	public static readonly NonPrintable = 15;
	public static readonly RULE_document = 0;
	public static readonly RULE_interchange = 1;
	public static readonly RULE_group = 2;
	public static readonly RULE_transaction = 3;
	public static readonly RULE_segment = 4;
	public static readonly RULE_interchangeHeader = 5;
	public static readonly RULE_interchangeTrailer = 6;
	public static readonly RULE_groupHeader = 7;
	public static readonly RULE_groupTrailer = 8;
	public static readonly RULE_transactionHeader = 9;
	public static readonly RULE_transactionTrailer = 10;
	public static readonly RULE_segmentEnd = 11;
	public static readonly RULE_repitition = 12;
	public static readonly RULE_element = 13;
	public static readonly RULE_interchangeElement = 14;
	public static readonly RULE_strictElement = 15;
	public static readonly RULE_dataCharElement = 16;
	public static readonly RULE_repititionCharElement = 17;
	public static readonly RULE_componentCharElement = 18;
	public static readonly RULE_repeatedElement = 19;
	public static readonly RULE_component = 20;
	public static readonly RULE_value = 21;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"document", "interchange", "group", "transaction", "segment", "interchangeHeader", 
		"interchangeTrailer", "groupHeader", "groupTrailer", "transactionHeader", 
		"transactionTrailer", "segmentEnd", "repitition", "element", "interchangeElement", 
		"strictElement", "dataCharElement", "repititionCharElement", "componentCharElement", 
		"repeatedElement", "component", "value",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "'ISA'", "'IEA'", "'GS'", "'GE'", "'ST'", "'SE'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "DataSeparator", "RepititionSeparator", "ComponentSeparator", 
		"SegmentTerminator", "EndOfLine", "ControlChar", "Char", "InterchangeHeader", 
		"InterchangeTrailer", "GroupHeader", "GroupTrailer", "TransactionHeader", 
		"TransactionTrailer", "Tag", "NonPrintable",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(EdiX12Parser._LITERAL_NAMES, EdiX12Parser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return EdiX12Parser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "EdiX12Parser.g4"; }

	// @Override
	public get ruleNames(): string[] { return EdiX12Parser.ruleNames; }

	// @Override
	public get serializedATN(): string { return EdiX12Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(EdiX12Parser._ATN, this);
	}
	// @RuleVersion(0)
	public document(): DocumentContext {
		let _localctx: DocumentContext = new DocumentContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, EdiX12Parser.RULE_document);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 45;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 44;
				this.interchange();
				}
				}
				this.state = 47;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === EdiX12Parser.InterchangeHeader);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interchange(): InterchangeContext {
		let _localctx: InterchangeContext = new InterchangeContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, EdiX12Parser.RULE_interchange);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 49;
			this.interchangeHeader();
			this.state = 51;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 50;
				this.group();
				}
				}
				this.state = 53;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === EdiX12Parser.GroupHeader);
			this.state = 55;
			this.interchangeTrailer();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public group(): GroupContext {
		let _localctx: GroupContext = new GroupContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, EdiX12Parser.RULE_group);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 57;
			this.groupHeader();
			this.state = 59;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 58;
				this.transaction();
				}
				}
				this.state = 61;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === EdiX12Parser.TransactionHeader);
			this.state = 63;
			this.groupTrailer();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public transaction(): TransactionContext {
		let _localctx: TransactionContext = new TransactionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, EdiX12Parser.RULE_transaction);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 65;
			this.transactionHeader();
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 66;
				this.segment();
				}
				}
				this.state = 69;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === EdiX12Parser.Tag);
			this.state = 71;
			this.transactionTrailer();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public segment(): SegmentContext {
		let _localctx: SegmentContext = new SegmentContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, EdiX12Parser.RULE_segment);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 73;
			this.match(EdiX12Parser.Tag);
			this.state = 76;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 76;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
				case 1:
					{
					this.state = 74;
					this.element();
					}
					break;

				case 2:
					{
					this.state = 75;
					this.repitition();
					}
					break;
				}
				}
				this.state = 78;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === EdiX12Parser.DataSeparator);
			this.state = 80;
			this.segmentEnd();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interchangeHeader(): InterchangeHeaderContext {
		let _localctx: InterchangeHeaderContext = new InterchangeHeaderContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, EdiX12Parser.RULE_interchangeHeader);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 82;
			this.match(EdiX12Parser.InterchangeHeader);
			this.state = 83;
			this.interchangeElement();
			this.state = 84;
			this.interchangeElement();
			this.state = 85;
			this.interchangeElement();
			this.state = 86;
			this.interchangeElement();
			this.state = 87;
			this.interchangeElement();
			this.state = 88;
			this.interchangeElement();
			this.state = 89;
			this.interchangeElement();
			this.state = 90;
			this.interchangeElement();
			this.state = 91;
			this.interchangeElement();
			this.state = 92;
			this.interchangeElement();
			this.state = 93;
			this.interchangeElement();
			this.state = 94;
			this.interchangeElement();
			this.state = 95;
			this.interchangeElement();
			this.state = 96;
			this.interchangeElement();
			this.state = 97;
			this.interchangeElement();
			this.state = 98;
			this.interchangeElement();
			this.state = 99;
			this.segmentEnd();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interchangeTrailer(): InterchangeTrailerContext {
		let _localctx: InterchangeTrailerContext = new InterchangeTrailerContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, EdiX12Parser.RULE_interchangeTrailer);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 101;
			this.match(EdiX12Parser.InterchangeTrailer);
			this.state = 102;
			this.strictElement();
			this.state = 103;
			this.strictElement();
			this.state = 104;
			this.segmentEnd();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public groupHeader(): GroupHeaderContext {
		let _localctx: GroupHeaderContext = new GroupHeaderContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, EdiX12Parser.RULE_groupHeader);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 106;
			this.match(EdiX12Parser.GroupHeader);
			this.state = 107;
			this.strictElement();
			this.state = 108;
			this.strictElement();
			this.state = 109;
			this.strictElement();
			this.state = 110;
			this.strictElement();
			this.state = 111;
			this.strictElement();
			this.state = 112;
			this.strictElement();
			this.state = 113;
			this.strictElement();
			this.state = 114;
			this.strictElement();
			this.state = 115;
			this.segmentEnd();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public groupTrailer(): GroupTrailerContext {
		let _localctx: GroupTrailerContext = new GroupTrailerContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, EdiX12Parser.RULE_groupTrailer);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this.match(EdiX12Parser.GroupTrailer);
			this.state = 118;
			this.strictElement();
			this.state = 119;
			this.strictElement();
			this.state = 120;
			this.segmentEnd();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public transactionHeader(): TransactionHeaderContext {
		let _localctx: TransactionHeaderContext = new TransactionHeaderContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, EdiX12Parser.RULE_transactionHeader);
		try {
			this.state = 133;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				{
				this.state = 122;
				this.match(EdiX12Parser.TransactionHeader);
				this.state = 123;
				this.strictElement();
				this.state = 124;
				this.strictElement();
				this.state = 125;
				this.strictElement();
				this.state = 126;
				this.segmentEnd();
				}
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				{
				this.state = 128;
				this.match(EdiX12Parser.TransactionHeader);
				this.state = 129;
				this.strictElement();
				this.state = 130;
				this.strictElement();
				this.state = 131;
				this.segmentEnd();
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public transactionTrailer(): TransactionTrailerContext {
		let _localctx: TransactionTrailerContext = new TransactionTrailerContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, EdiX12Parser.RULE_transactionTrailer);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 135;
			this.match(EdiX12Parser.TransactionTrailer);
			this.state = 136;
			this.strictElement();
			this.state = 137;
			this.strictElement();
			this.state = 138;
			this.segmentEnd();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public segmentEnd(): SegmentEndContext {
		let _localctx: SegmentEndContext = new SegmentEndContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, EdiX12Parser.RULE_segmentEnd);
		try {
			this.state = 146;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 140;
				this.match(EdiX12Parser.ControlChar);
				this.state = 141;
				this.match(EdiX12Parser.ControlChar);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 142;
				this.match(EdiX12Parser.ControlChar);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 143;
				this.match(EdiX12Parser.SegmentTerminator);
				this.state = 144;
				this.match(EdiX12Parser.EndOfLine);
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 145;
				this.match(EdiX12Parser.SegmentTerminator);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public repitition(): RepititionContext {
		let _localctx: RepititionContext = new RepititionContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, EdiX12Parser.RULE_repitition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 148;
			this.element();
			this.state = 150;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 149;
				this.repeatedElement();
				}
				}
				this.state = 152;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === EdiX12Parser.RepititionSeparator);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public element(): ElementContext {
		let _localctx: ElementContext = new ElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, EdiX12Parser.RULE_element);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 154;
			this.match(EdiX12Parser.DataSeparator);
			this.state = 159;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << EdiX12Parser.ComponentSeparator) | (1 << EdiX12Parser.Char) | (1 << EdiX12Parser.InterchangeHeader) | (1 << EdiX12Parser.InterchangeTrailer) | (1 << EdiX12Parser.GroupHeader) | (1 << EdiX12Parser.GroupTrailer) | (1 << EdiX12Parser.TransactionHeader) | (1 << EdiX12Parser.TransactionTrailer) | (1 << EdiX12Parser.Tag) | (1 << EdiX12Parser.NonPrintable))) !== 0)) {
				{
				this.state = 157;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
				case 1:
					{
					this.state = 155;
					this.value();
					}
					break;

				case 2:
					{
					this.state = 156;
					this.component();
					}
					break;
				}
				}
				this.state = 161;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interchangeElement(): InterchangeElementContext {
		let _localctx: InterchangeElementContext = new InterchangeElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, EdiX12Parser.RULE_interchangeElement);
		try {
			this.state = 166;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 162;
				this.dataCharElement();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 163;
				this.strictElement();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 164;
				this.repititionCharElement();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 165;
				this.componentCharElement();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public strictElement(): StrictElementContext {
		let _localctx: StrictElementContext = new StrictElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, EdiX12Parser.RULE_strictElement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			this.match(EdiX12Parser.DataSeparator);
			this.state = 170;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 169;
				this.value();
				}
				}
				this.state = 172;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << EdiX12Parser.Char) | (1 << EdiX12Parser.InterchangeHeader) | (1 << EdiX12Parser.InterchangeTrailer) | (1 << EdiX12Parser.GroupHeader) | (1 << EdiX12Parser.GroupTrailer) | (1 << EdiX12Parser.TransactionHeader) | (1 << EdiX12Parser.TransactionTrailer) | (1 << EdiX12Parser.Tag) | (1 << EdiX12Parser.NonPrintable))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dataCharElement(): DataCharElementContext {
		let _localctx: DataCharElementContext = new DataCharElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, EdiX12Parser.RULE_dataCharElement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 174;
			_la = this._input.LA(1);
			if (!(_la === EdiX12Parser.DataSeparator || _la === EdiX12Parser.ControlChar)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 176;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 175;
				this.value();
				}
				}
				this.state = 178;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << EdiX12Parser.Char) | (1 << EdiX12Parser.InterchangeHeader) | (1 << EdiX12Parser.InterchangeTrailer) | (1 << EdiX12Parser.GroupHeader) | (1 << EdiX12Parser.GroupTrailer) | (1 << EdiX12Parser.TransactionHeader) | (1 << EdiX12Parser.TransactionTrailer) | (1 << EdiX12Parser.Tag) | (1 << EdiX12Parser.NonPrintable))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public repititionCharElement(): RepititionCharElementContext {
		let _localctx: RepititionCharElementContext = new RepititionCharElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, EdiX12Parser.RULE_repititionCharElement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 180;
			this.match(EdiX12Parser.DataSeparator);
			this.state = 184;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case EdiX12Parser.ControlChar:
				{
				this.state = 181;
				this.match(EdiX12Parser.ControlChar);
				}
				break;
			case EdiX12Parser.RepititionSeparator:
				{
				this.state = 182;
				this.match(EdiX12Parser.RepititionSeparator);
				}
				break;
			case EdiX12Parser.Char:
			case EdiX12Parser.InterchangeHeader:
			case EdiX12Parser.InterchangeTrailer:
			case EdiX12Parser.GroupHeader:
			case EdiX12Parser.GroupTrailer:
			case EdiX12Parser.TransactionHeader:
			case EdiX12Parser.TransactionTrailer:
			case EdiX12Parser.Tag:
			case EdiX12Parser.NonPrintable:
				{
				this.state = 183;
				this.value();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public componentCharElement(): ComponentCharElementContext {
		let _localctx: ComponentCharElementContext = new ComponentCharElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, EdiX12Parser.RULE_componentCharElement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 186;
			this.match(EdiX12Parser.DataSeparator);
			this.state = 187;
			_la = this._input.LA(1);
			if (!(_la === EdiX12Parser.ComponentSeparator || _la === EdiX12Parser.ControlChar)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public repeatedElement(): RepeatedElementContext {
		let _localctx: RepeatedElementContext = new RepeatedElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 38, EdiX12Parser.RULE_repeatedElement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 189;
			this.match(EdiX12Parser.RepititionSeparator);
			this.state = 194;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << EdiX12Parser.ComponentSeparator) | (1 << EdiX12Parser.Char) | (1 << EdiX12Parser.InterchangeHeader) | (1 << EdiX12Parser.InterchangeTrailer) | (1 << EdiX12Parser.GroupHeader) | (1 << EdiX12Parser.GroupTrailer) | (1 << EdiX12Parser.TransactionHeader) | (1 << EdiX12Parser.TransactionTrailer) | (1 << EdiX12Parser.Tag) | (1 << EdiX12Parser.NonPrintable))) !== 0)) {
				{
				this.state = 192;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 15, this._ctx) ) {
				case 1:
					{
					this.state = 190;
					this.value();
					}
					break;
